# cpp-microservice-template

./: .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  conanfile.py  docker-compose.yml
.github/: dependabot.yml
.github/agents/: cpp-developer.agent.md  maintenance-engineer.agent.md  project-planner.agent.md  qa-engineer.agent.md  release-engineer.agent.md  requirements-analyst.agent.md  system-architect.agent.md
.github/skills/semver-commit-description/: SKILL.md
.github/skills/semver-commit-description/references/: semver-decision-reference.md
.github/skills/semver-version-publish/: SKILL.md
.github/workflows/: ci.yml
conan/profiles/: linux-clang18
deploy/envoy/: envoy.yaml
deploy/k8s/: deployment.yaml  service.yaml
deploy/observability/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
deploy/otel-collector/: otel-collector-config.yaml
deploy/prometheus/: prometheus.yml
docs/: status.md
docs/design/: microservice-design.md
docs/requirements/: microservice-srs.md
include/core/: greeter_service.hpp
include/observability/: logger.hpp  metrics.hpp  tracing.hpp
include/transport/grpc/: greeter_server.hpp
include/transport/rest/: rest_server.hpp
proto/: CMakeLists.txt
proto/greeter/v1/: greeter.proto
proto/hello/v1/: hello.proto
src/: CMakeLists.txt  hello_service.cpp  hello_service.hpp  logger.cpp  logger.hpp  main.cpp  metrics.cpp  metrics.hpp  tracer.cpp  tracer.hpp
src/core/: greeter_service.cpp
src/observability/: logger.cpp  metrics.cpp  tracing.cpp
src/transport/grpc/: greeter_server.cpp
src/transport/rest/: rest_server.cpp
tests/: CMakeLists.txt  hello_service_test.cpp  logger_test.cpp  metrics_test.cpp  tracer_test.cpp
